[package]
name = "labeled_webcam_photos"
version = "0.1.0"
edition = "2024"

[dependencies]
nokhwa = { version = "0.10.7", features = ["input-native"] }
image = "0.25.5"
anyhow = "1"
pancurses = "0.17"
imageproc = "0.25.0"
r2r = "0.9"
futures = "0.3"
smol = "2"
ctrlc = "3.4"
crossbeam = "0.8"
hash_histogram = "0.9.3"